src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/*:root {*/
/*    --background: #ffffff;*/
/*    --foreground: #171717;*/
/*}*/

/*@media (prefers-color-scheme: dark) {*/
/*    :root {*/
/*        --background: #0a0a0a;*/
/*        --foreground: #ededed;*/
/*    }*/
/*}*/

body {
    color: var(--foreground);
    background: var(--background);
    font-family: Arial, Helvetica, sans-serif;
    background-image: url('/background.jpg'), radial-gradient(circle, rgba(0,0,0,0) 20%, rgba(0,0,0,0.8) 100%);
    background-repeat: repeat, no-repeat; /* This makes the image a pattern and the vignette effect non-repeating */
    background-size: 300px, cover; /* Adjust as needed */
    background-blend-mode: overlay; /* Blend the vignette with the background image */
    overflow: hidden; /* Prevents the background image from scrolling */
}

@layer utilities {
    .text-balance {
        text-wrap: balance;
    }
}

.spooky-background {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: -5;
    display: flex;
    flex-wrap: wrap;
}

.spooky-image-container {
    position: relative;
    flex: 0 0 auto;
    opacity: .75;
    margin-right: var(--random-gap);
}

.row-1 {
    top: 5%;
    animation: moveLeft 30s linear infinite;
}

.row-2 {
    top: 40%;
    animation: moveRight 15s linear infinite;
}

.row-3 {
    top: 75%;
    animation: moveLeft 20s linear infinite;
}

@keyframes moveLeft {
    0% {
        transform: translateX(100%);
    }
    100% {
        transform: translateX(-100%);
    }
}

@keyframes moveRight {
    0% {
        transform: translateX(-100%);
    }
    100% {
        transform: translateX(100%);
    }
}

